# serializer version: 1
# name: test_set_operation_mode[botched]
  list([
    dict({
      'until': HAFakeDatetime(2024, 7, 10, 12, 30, tzinfo=datetime.timezone.utc),
    }),
    dict({
      'until': HAFakeDatetime(2024, 7, 10, 12, 30, tzinfo=datetime.timezone.utc),
    }),
  ])
# ---
# name: test_set_operation_mode[default]
  list([
    dict({
      'until': HAFakeDatetime(2024, 7, 10, 12, 0, tzinfo=datetime.timezone.utc),
    }),
    dict({
      'until': HAFakeDatetime(2024, 7, 10, 12, 0, tzinfo=datetime.timezone.utc),
    }),
  ])
# ---
# name: test_setup_platform[botched][water_heater.domestic_hot_water-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'away_mode': 'on',
      'current_temperature': 23.0,
      'friendly_name': 'Domestic Hot Water',
      'icon': 'mdi:thermometer-lines',
      'max_temp': 60.0,
      'min_temp': 43.3,
      'operation_list': list([
        'auto',
        'on',
        'off',
      ]),
      'operation_mode': 'off',
      'status': dict({
        'activeFaults': tuple(
        ),
        'dhw_id': '3933910',
        'setpoints': dict({
          'next_sp_from': HAFakeDatetime(2024, 7, 10, 8, 30, tzinfo=zoneinfo.ZoneInfo(key='America/Santiago')),
          'next_sp_state': 'Off',
          'this_sp_from': HAFakeDatetime(2024, 7, 10, 6, 30, tzinfo=zoneinfo.ZoneInfo(key='America/Santiago')),
          'this_sp_state': 'On',
        }),
        'state_status': dict({
          'mode': 'PermanentOverride',
          'state': 'Off',
        }),
        'temperature_status': dict({
          'is_available': True,
          'temperature': 23.0,
        }),
      }),
      'supported_features': <WaterHeaterEntityFeature: 6>,
      'target_temp_high': None,
      'target_temp_low': None,
      'temperature': None,
    }),
    'context': <ANY>,
    'entity_id': 'water_heater.domestic_hot_water',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_setup_platform[default][water_heater.domestic_hot_water-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'away_mode': 'on',
      'current_temperature': 23.0,
      'friendly_name': 'Domestic Hot Water',
      'icon': 'mdi:thermometer-lines',
      'max_temp': 60.0,
      'min_temp': 43.3,
      'operation_list': list([
        'auto',
        'on',
        'off',
      ]),
      'operation_mode': 'off',
      'status': dict({
        'activeFaults': tuple(
        ),
        'dhw_id': '3933910',
        'setpoints': dict({
          'next_sp_from': HAFakeDatetime(2024, 7, 10, 13, 0, tzinfo=zoneinfo.ZoneInfo(key='Europe/London')),
          'next_sp_state': 'Off',
          'this_sp_from': HAFakeDatetime(2024, 7, 10, 12, 0, tzinfo=zoneinfo.ZoneInfo(key='Europe/London')),
          'this_sp_state': 'On',
        }),
        'state_status': dict({
          'mode': 'PermanentOverride',
          'state': 'Off',
        }),
        'temperature_status': dict({
          'is_available': True,
          'temperature': 23.0,
        }),
      }),
      'supported_features': <WaterHeaterEntityFeature: 6>,
      'target_temp_high': None,
      'target_temp_low': None,
      'temperature': None,
    }),
    'context': <ANY>,
    'entity_id': 'water_heater.domestic_hot_water',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
